<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ahmed.test</groupId>
	<artifactId>test-project</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<name>test-project</name>
	<!-- FIXME change it to the project's website -->
	<url>http://www.example.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<customer>ers-std</customer>
		<product>ers</product>
		<local.run>true</local.run>
		<testDataFile>src/test/resources/customer/${customer}/test-data/data_${product}.xml</testDataFile>
	</properties>



	<build>
		<plugins>
			<plugin>
				<artifactId>maven-filter-plugin</artifactId>
				<groupId>com.seamless.meta.plugins</groupId>
				<version>0.1</version>
				<executions>
					<execution>
						<id>build-rpmspec</id>
						<goals>
							<goal>filter</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<files>
								<param>${project.build.directory}/rpm-spec-template/rpm.spec</param>
							</files>
							<fields>
								<rpmBuildNumber>${buildNumber}</rpmBuildNumber>
								<rpmRequires>ers-base &gt;= 1.2 | ersinstall &gt;= 1.0|
									contrib-jre</rpmRequires>
								<rpmBuildArch>noarch</rpmBuildArch>
								<rpmUseInit>standard-automation</rpmUseInit>
								<rpmService>standard-automation</rpmService>
								<rpmAddRunFile>standard-automation</rpmAddRunFile>
								<rpmFileListExcludeDir>opt/seamless/lib/perl</rpmFileListExcludeDir>
							</fields>
							<outputDirectory>${project.build.directory}/rpm</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>build-scripts</id>
						<goals>
							<goal>filter</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<files>
								<param>src/main/bin/standard-automation.sh</param>
								<param>src/main/bin/automation-ui.sh</param>
							</files>
							<fields>
								<buildNumber>${buildNumber}</buildNumber>
							</fields>
							<outputDirectory>${project.build.directory}/bin</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>${suiteXml}</suiteXmlFile>
					</suiteXmlFiles>
					<!-- <systemProperties> <property> <name>testDataFile</name> <value>${testDataFile}</value> 
						</property> -->
					<systemPropertyVariables>
						<customer>${customer}</customer>
						<local.run>${local.run}</local.run>
					</systemPropertyVariables>
					<!-- <property> <name>local.run</name> <value>${local.run}</value> </property> 
						<property> <name>product</name> <value>${product}</value> </property> </systemProperties> -->
					<testFailureIgnore>true</testFailureIgnore>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>



	<dependencies>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>4.3.0</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-path</artifactId>
			<version>4.3.0</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>xml-path</artifactId>
			<version>4.3.0</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>4.3.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.5.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.4.5</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.39</version>
		</dependency>

	</dependencies>

	<!-- <build> <pluginManagement>lock down plugins versions to avoid using 
		Maven defaults (may be moved to parent pom) <plugins> clean lifecycle, see 
		https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle 
		<plugin> <artifactId>maven-clean-plugin</artifactId> <version>3.1.0</version> 
		</plugin> default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging 
		<plugin> <artifactId>maven-resources-plugin</artifactId> <version>3.0.2</version> 
		</plugin> <plugin> <artifactId>maven-compiler-plugin</artifactId> <version>3.8.0</version> 
		</plugin> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>2.22.1</version> 
		</plugin> <plugin> <artifactId>maven-jar-plugin</artifactId> <version>3.0.2</version> 
		</plugin> <plugin> <artifactId>maven-install-plugin</artifactId> <version>2.5.2</version> 
		</plugin> <plugin> <artifactId>maven-deploy-plugin</artifactId> <version>2.8.2</version> 
		</plugin> site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle 
		<plugin> <artifactId>maven-site-plugin</artifactId> <version>3.7.1</version> 
		</plugin> <plugin> <artifactId>maven-project-info-reports-plugin</artifactId> 
		<version>3.0.0</version> </plugin> </plugins> </pluginManagement> </build> -->
</project>
